# Cpp-project

./: .gitignore  CMakeLists.txt  Makefile  OTPManager.cpp  OTPManager.h  README.md  User.cpp  User.h  UserManager.cpp  UserManager.h  Wallet.cpp  Wallet.h  build.bat  build_log.txt  cmake_install.cmake  main.cpp
config/: CMakeLists.txt  db_config.h
controller/: AuthController.cpp  AuthController.h  CMakeLists.txt  user_controller.cpp  user_controller.h
data/: transactions.json  users.json  wallets.json
db/: CMakeLists.txt  Database.cpp  Database.h  user_repository.cpp  user_repository.h
include/: Config.h
include/config/: AppConfig.hpp
include/controller/: AuthController.h
include/models/: ModelJsonSerialization.hpp  Transaction.hpp  User.hpp  Wallet.hpp
include/services/: AdminService.hpp  AuthService.hpp  OTPService.hpp  UserService.hpp  WalletService.hpp
include/utils/: DataInitializer.hpp  FileHandler.hpp  HashUtils.hpp  InputValidator.hpp  Logger.hpp  TimeUtils.hpp
model/: CMakeLists.txt  User.cpp  User.h  user.cpp  user.h
source/: main.cpp
source/models/: Transaction.cpp  User.cpp  Wallet.cpp
source/services/: AdminService.cpp  AuthService.cpp  OTPService.cpp  UserService.cpp  WalletService.cpp
source/utils/: DataInitializer.cpp  DataInitializer.hpp  FileHandler.cpp  HashUtils.cpp  InputValidator.cpp  Logger.cpp  TimeUtils.cpp
utils/: CMakeLists.txt  Hash.cpp  Hash.h  password_hasher.cpp  password_hasher.h
view/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  menu_view.cpp  menu_view.h
